# AIAgetn_InternalDoc

./: .gitignore
docagent/: README.md  pyproject.toml
docagent/src/docagent/: crew.py  main.py
docagent/src/docagent/config/: agents.yaml  tasks.yaml
