[project]
name = "docagent"
version = "0.1.0"
description = "docagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
docagent = "docagent.main:run"
run_crew = "docagent.main:run"
train = "docagent.main:train"
replay = "docagent.main:replay"
test = "docagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
